--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 
         @media (max-height: 800px) {
             .scroll-indicator {
-                display: none;
+                bottom: 0 px;
             }
         }
 
