--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
         .scroll-indicator {
             position: absolute;
-            bottom: 40px;
+            bottom: 0px;
             left: 50%;
             transform: translateX(-50%);
             animation: bounce 2s infinite;
@@ -664,6 +664,15 @@
                 <a href="mailto:ivn.veliky@gmail.com" class="contact-link">📧 Email</a>
                 <a href="https://t.me/eevan_it" class="contact-link">💬 Telegram</a>
                 <a href="#" class="contact-link">📍 Kharkiv, UA</a>
+
+                <!-- Download CV button -->
+                <a
+                    href="./Ivan_V_CV_2026.pdf"
+                    class="contact-link"
+                    download
+                >
+                    📄 Download CV (PDF)
+                </a>
             </div>
 
             <div class="scroll-indicator"></div>
