--- a/index.html
+++ b/index.html
@@ -571,6 +571,7 @@
         .language-card .emoji {
             font-size: 2em;
             margin-bottom: 10px;
+            font-family: "Segoe UI Emoji", "Apple Color Emoji", "Noto Color Emoji", sans-serif;
         }
 
         .language-card .name {
@@ -681,7 +682,7 @@
         <section class="section">
             <div class="summary-box">
                 <p>
-                    Results-driven professional with 2+ years in affiliate marketing and media buying, backed by 4 years of software development. Specialized in driving growth through data-driven strategies, partner management, and paid acquisition in iGaming and crypto verticals.
+                    Results-driven professional with 1+ years in affiliate marketing and media buying, backed by 4 years of software development. Specialized in driving growth through data-driven strategies, partner management, and paid acquisition in iGaming and crypto verticals.
                 </p>
             </div>
         </section>
@@ -704,7 +705,7 @@
                     <ul>
                         <li>AI Tools (ChatGPT, Claude)</li>
                         <li>Google Sheets & Analytics</li>
-                        <li>Node.js, .NET, HTML/CSS</li>
+                        <li>Python, Node.js, .NET, HTML/CSS</li>
                         <li>API Integration</li>
                         <li>Database Management</li>
                     </ul>
