--- a/index.html
+++ b/index.html
@@ -773,17 +773,17 @@
 
             <div class="languages-grid">
                 <div class="language-card">
-                    <div class="emoji">🇬🇧</div>
+                    <div class="emoji"><span>🇬🇧</span></div>
                     <div class="name">English</div>
                     <div class="level">Advanced</div>
                 </div>
                 <div class="language-card">
-                    <div class="emoji">🇺🇦</div>
+                    <div class="emoji"> <span>🇺🇦</span></div>
                     <div class="name">Ukrainian</div>
                     <div class="level">Native</div>
                 </div>
                 <div class="language-card">
-                    <div class="emoji">🇷🇺</div>
+                    <div class="emoji"><span>🇷🇺</span></div>
                     <div class="name">Russian</div>
                     <div class="level">Native</div>
                 </div>
